# CoT-checker

./: .gitignore  README.md  REPORT.md  SSAE_AUDIT.md  TAMIA.md  WIP_Report.md  explorer.html  mpb_report.md  mpb_results.md  pyproject.toml  sprint.md
Paper-Scrapper/: .env.example  config.yaml  models.py  requirements.txt  scraper.py
colab_scripts/: prontoqa_pipeline.ipynb  train_ssae_symbolic.ipynb
data/: prontoqa_sample.jsonl
docs/: attention_routing_v0_plan.md  cot_causal_graph_v0_plan.md  latent_memory_v0_plan.md  parametric_retrieval_access_v1_plan.md  parametric_retrieval_component_v1_plan.md  parametric_retrieval_minimal_v1_plan.md  parametric_retrieval_sae_decomp_plan.md  parametric_retrieval_steer_v1_plan.md  research_direction_s3.md  s3_stage2_layer_ablation_plan.md  sprint2_dataset_design.md  transition_operator_v0_plan.md
experiments/: phase1_gsm8k_aug.yaml
scripts/: ablation_eq_token.py  add_ms_solution_ids.py  aggregate_heldout_eval.py  analyze_confidence_battery.py  analyze_fork_representation_audit.py  analyze_onpolicy_probe.py  analyze_steer_causality.py  analyze_transition_probes.py  assemble_multilayer_concat.py  audit_future_ssae_data.py  audit_load_paper_ssae_checkpoint.py  build_eval_text_cache.py  build_full_processbench_eval_jobs.py  build_prm800k_forks.py  build_prm800k_full.py  build_prm800k_heldout_test.py  build_prm800k_prestudy.py  build_processbench_gsm8k_jsonl.py  build_steering_directions.py  cache_transition_hidden_states.py  check_prestudy_artifacts.py  check_ssae_deps.sh  compare_mechanistic_viz.py  demo_sparse_vectors.py  (+94 more)
(+394 files in other folders)
